# scrabrudo

./: .gitattributes  .gitignore  Cargo.toml  README.md
data/: lookup  simple_20_1000.sstable  simple_5_10.sstable  simple_5_1000.sstable
data/small_test_5_10/: conf  db
src/: bet.rs  dict.rs  die.rs  game.rs  hand.rs  main.rs  player.rs  precompute.rs  testing.rs  tile.rs
