[package]
name = "scrabrudo"
version = "0.1.0"
authors = ["Harry Askham <harryaskham@gmail.com>"]
edition = "2018"

[dependencies]
speculate = "0.1.0"
rand = "0.6.1"
log = "0.4.6"
pretty_env_logger = "0.3"
cute = "0.3.0"
itertools = "0.8.0"
probability = "0.15.5"
approx = "0.3.1"
maplit = "1.0.1"
bincode = "1.0.1"
lazy_static = "1.2.0"
rayon = "1.0"
clap = "2.32.0"
sled = "0.17.9"

[dev-dependencies]
speculate = "0.1.0"

[[bin]]
name = "precompute"
path = "src/precompute.rs"
